Fixes:
 * Possible fix of crush when editing variables.

-------------------------
 v1.1.0 (2020-04-18)
-------------------------

Features:
 * Built in changelog. Will be auto-shown when updated. Could be opened with: "Help->Changelog".
 * When creating a new map the editor will add "dmm" extension to the file automatically.
 * "Show Icons" checkbox for "Environment Tree" is replaced by "Collapse All" button.
 * Added a widget for quick modification of the "dir" variable right from the tile popup.

Fixes:
 * The old bug which was the reason for map corruptions.

Tweaks:
 * From the tile popup, for turfs and areas, the options to change "movable" parameters are removed.
 * The editor window title will show the name of the currently opened environment.